# creator-vault

./: .gitignore  BACKEND_ARCHITECTURE.md  BACKEND_GUIDE.md  CLAUDE.md  FRONTEND_ARCHITECTURE.md  Hackathon II - Todo Spec-Driven Development (1).md  PROJECT.md  README.md  chatbot-backend-architecture.md  drizzle.config.ts  install-deps.sh  middleware.ts  package.json
.claude/agents/: backend-developer.agent.md  frontend-developer.agent.md
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_ideas_table.py
backend/src/api/: deps.py
backend/src/api/v1/: router.py
backend/src/api/v1/endpoints/: health.py  ideas.py  users.py
backend/src/core/: config.py  database.py  logging.py  security.py
backend/src/middleware/: correlation_id.py  error_handler.py  security_headers.py
backend/src/models/: base.py  idea.py
backend/src/repositories/: base_repository.py  idea_repository.py
backend/src/schemas/: common.py  idea.py
backend/src/services/: idea_service.py
backend/tests/: conftest.py
components/landing/: features.tsx  hero.tsx
components/layout/: landing-nav.tsx
db/: schema.ts
frontend/: CLAUDE.md  drizzle.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
lib/: auth-client.ts  auth.ts  session.ts
lib/utils/: constants.ts  format.ts
research/: agent-creation-research.md  skill-creation-research.md
(+239 files in other folders)
