[project]
name = "creatorvault-backend"
version = "0.1.0"
description = "CreatorVault Phase 2 - Backend API for Content Idea Management"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "pyjwt>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]
